[package]
name = "tower_defense"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
tower_defense_plugin = { version = "0.1.0", path = "../tower_defense_plugin" }
tower_defense_gui = { version = "0.1.0", path = "../tower_defense_gui" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
